<resources>
    <string name="app_name">Let\'s Go</string>

    <string name="letGo">Let\'s Go</string>


    <!--    About Us Activity String-->

    <string name="About">About Us</string>

    <string name="Vision">Vision</string>

    <string name="Mission">Mission</string>


    <string name="AboutDetail">Let\'s Go is now one-stop connection, also an aggregator of car rentals and taxis in terms of geographical reach across India to offer a cost-effective, comfortable, safe and secure transport system. Let\'s Go aims to be one of the known and trusted taxi operators and be one of the role models when it comes to the concept of operations and giving services to customers. Let\'s Go a Nationwide Directory introduces customized solutions for all customers and service providers meet all your needs and requirements and focus towards organizing the largely unorganized Indian personal ground transportation. We introduce multiple innovative schemes and transportation models for the benefit of all travelers work with various taxi operators and enable them with latest technology to make sure customers get an easily accessible, safe &amp; reliable taxi ride with 24x7 customer support centers.</string>

    <string name="VisionDetail">To attain excellence in the providing affordable passionate car travel and rental services medium by developing new technologies and implementing new ideas from every level commute individual safe and secure to Assure, Friendly budgetary constraints provider across the different parts of the country as a whole on a global front.</string>

    <string name="MissionDetail">To offer one-stop shop for all your travel need services with best luxurious services to clients and customers to offer Safe, Efficient and Eco - friendly car travel and rental services. To exceed customer expectations by providing high-quality and reliable services at every level Long term growth and customer satisfaction to give you nothing but the best - you get more than way you pay for!</string>


    <!--    Allow Location Activity String-->

    <string name="allowLocationH2"> Set your location to start exploring \n world around you</string>

    <string name="allowLocationH1"> Hi, nice to meet you!</string>

    <string name="manualLocation">or select your location manually</string>

    <string name="GpsTxt">Use my Current Location</string>

    <string name="ContactSubmitBtn">Submit</string>

    <string name="allowTxt">We only access location while you are using the app to improve your order experience.</string>


    <!--    User Contact Us Activity-->

    <string name="Cid">Hi!</string>

    <string name="CRed">We are ready to help you.</string>

    <string name="COur">Our service hour is</string>

    <string name="COmon">Monday - Saturday (10am - 6pm)</string>

    <string name="Csat"> Sunday\t \t (holiday)</string>


    <!--    Driver Account Setting-->

    <string name="driver_first_name1">First Name</string>
    <string name="DUNameTextView">Enter Name</string>
    <string name="driver_mobile_number_name1">Mobile Number</string>
    <string name="DUNumberTextView"> Enter Mobile Number</string>
    <string name="driver_email_name1">Email</string>
    <string name="DUNEmailTextView">Email</string>
    <string name="driver_password_name1">Password</string>
    <string name="DUPasswordTextView">********</string>


    <string name="DF_Txt"> Enter OTP to update the setting.</string>


    <string name="signUp_txt">This app is the simplest way to \n explore new ways to \n travel.</string>

    <string name="title_activity_driver_home_page">DriverHomePageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_driver_maps">Map</string>

    <string name="title_activity_user_maps">Map</string>

    <string name="feedbackMessage">Your call request has been successfully submitted. we will get back to you soon. </string>

    <string name="RS">You have successfully created your account. You can now use your Id and Password to sign.
    Click Continue button bekkow to go Login Screen</string>
    <string name="title_activity_maps">Map</string>


    <string name="goggle_direction_key">AIzaSyAmLNU9X58Y0VgRZ_sgGAgOE3creMtmwHk</string>
    <string name="userPasswordtxt">Password :</string>
    <string name="myLoc">Current Location</string>
    <string name="pickLoc">Pickup Location</string>
    <string name="CustomareContactName">Name</string>
    <string name="CustomareContatUsNumber">Mobile Number</string>
    <string name="CustomareContactUsEmail">Email (optional)</string>
    <string name="CustomareContactUsMessage">Message</string>
    <string name="allow_location_driver_email_name1">Email</string>
    <string name="DUEmailEditText">Enter Email</string>
    <string name="allow_location_address">Address</string>
    <string name="DUAddressEditText">Enter Address</string>
    <string name="DUPasswordEditText">Enter Password</string>
    <string name="DriverAccountUpdateBtn">Update</string>
    <string name="cancle">Cancle</string>
    <string name="accept">Accept</string>
    <string name="imagedescription">ImageDescription</string>
    <string name="are_you_sure_you_want_to_cancel_the_trip">Are you sure you want to cancel the trip?</string>
    <string name="valid_reason">Fill the below form to cancel the trip.write the valid reason for trip cancellation.</string>
    <string name="your_name">Your Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="validReason">Valid Reason</string>
    <string name="reason_to_cancel_the_trip">Enter the valid reason to cancel the trip.</string>
    <string name="submit">Submit</string>
    <string name="retry">Retry</string>
    <string name="inr">INR</string>

</resources>
