<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/driverTripImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/fb_profile_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/DTuserName"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:text="Name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/driverTripImage"
                    app:layout_constraintTop_toTopOf="@id/driverTripImage" />


                <ImageView
                    android:contentDescription="@string/imagedescription"
                    android:id="@+id/startLocIcon"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_green_dot"
                    android:tint="@color/blue"
                    app:layout_constraintStart_toEndOf="@id/driverTripImage"
                    app:layout_constraintTop_toBottomOf="@id/DTuserName"/>

                <TextView
                    android:id="@+id/DTdriverAddress"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:text="@string/myLoc"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/startLocIcon"
                    app:layout_constraintStart_toEndOf="@id/startLocIcon"
                    app:layout_constraintTop_toTopOf="@id/startLocIcon" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toTopOf="@id/pickupIcon"
                    app:layout_constraintEnd_toEndOf="@id/startLocIcon"
                    app:layout_constraintStart_toStartOf="@id/startLocIcon"
                    app:layout_constraintTop_toBottomOf="@id/startLocIcon" />


                <ImageView
                    android:contentDescription="@string/imagedescription"
                    android:id="@+id/pickupIcon"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_red_dot"
                    app:layout_constraintStart_toEndOf="@id/driverTripImage"
                    app:layout_constraintTop_toBottomOf="@id/view" />

                <TextView
                    android:id="@+id/DTuserAddress"
                    android:layout_width="0dp"
                    android:layout_height="20sp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:text="@string/pickLoc"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/pickupIcon"
                    app:layout_constraintStart_toEndOf="@id/pickupIcon"
                    app:layout_constraintTop_toTopOf="@id/pickupIcon" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>